# reason-font-manager

./: README.md  azure-pipelines.yml  dune-project  example.json  package.json
.ci/: build-platform.yml
config/: discover.ml  dune
esy.lock/: index.json
example/: FontQuery.re  dune
example.esy.lock/: index.json
src/: FontDescriptor.h  FontDescriptor.re  FontManager.cpp  FontManager.re  FontManagerLinux.cpp  FontManagerMac.cpp  FontManagerWindows.cpp  FontWeight.re  FontWidth.re  dune
